package org.esfe.vacunacion.modelos;

public enum Especie {
    CANINO,
    FELINO,
    OTRO
}