package org.esfe.vacunacion.modelos;

public class RegistroVacunacion {
}
