@startuml
skinparam classAttributeIconSize 0

enum RolUsuario {
  ADMINISTRADOR
  BRIGADISTA
  PERSONAL_AUTORIZADO
}

enum EstadoUsuario {
  ACTIVO
  INACTIVO
}

enum Especie {
  PERRO
  GATO
}

enum EstadoMascota {
  ACTIVO
  FALLECIDO
  DESAPARECIDO
  OTRO
}

enum EstadoVacunacion {
  VACUNADA
  NO_VACUNADA
}

class Departamento <<entity>> {
  + idDepartamento: Long (PK)
  + nombre: String [100]
}

class Municipio <<entity>> {
  + idMunicipio: Long (PK)
  + idDepartamento: Long (FK)
  + nombre: String [100]
}

class Canton <<entity>> {
  + idCanton: Long (PK)
  + idMunicipio: Long (FK)
  + nombre: String [100]
}

class Colonia <<entity>> {
  + idColonia: Long (PK)
  + idCanton: Long (FK)
  + nombre: String [100]
}

class Vivienda <<entity>> {
  + idVivienda: Long (PK)
  + idColonia: Long (FK)
  + direccion: String [255]
  + referenciaUbicacion: String [255]
}

class Responsable <<entity>> {
  + idResponsable: Long (PK)
  + nombreCompleto: String [150]
  + telefono: String [20]
  + documentoIdentidad: String [20]
}

class ViviendaResponsable <<entity>> {
  + idVivienda: Long (PK, FK)
  + idResponsable: Long (PK, FK)
}

class Mascota <<entity>> {
  + idMascota: Long (PK)
  + idResponsable: Long (FK)
  + idVivienda: Long (FK)
  + nombre: String [100]
  + especie: Especie (ENUM)
  + fechaNacimiento: LocalDate
  + edadAproximadaMeses: Integer
  + estado: EstadoMascota (ENUM)
}

class Usuario <<entity>> {
  + idUsuario: Long (PK)
  + nombreCompleto: String [150]
  + correo: String [100]
  + contrasena: String [255]
  + rol: RolUsuario (ENUM)
  + estado: EstadoUsuario (ENUM)
}

class CampanaVacunacion <<entity>> {
  + idCampana: Long (PK)
  + nombre: String [150]
  + fechaInicio: LocalDate
  + fechaFin: LocalDate
  + estado: String [50]
}

class CoberturaTerritorial <<entity>> {
  + idCobertura: Long (PK)
  + idCampana: Long (FK)
  + idColonia: Long (FK)
}

class RegistroVacunacion <<entity>> {
  + idRegistro: Long (PK)
  + idMascota: Long (FK)
  + idCampana: Long (FK)
  + idUsuario: Long (FK)
  + estado: EstadoVacunacion (ENUM)
  + fechaRegistro: LocalDateTime
  + motivoNoVacunacion: String [500]
  + observaciones: String [500]
}

Departamento "1" -- "0..*" Municipio
Municipio "1" -- "0..*" Canton
Canton "1" -- "0..*" Colonia
Colonia "1" -- "0..*" Vivienda
Colonia "1" -- "0..*" CoberturaTerritorial

Responsable "1" -- "0..*" ViviendaResponsable
Vivienda "1" -- "0..*" ViviendaResponsable

Responsable "1" -- "0..*" Mascota
Vivienda "1" -- "0..*" Mascota

CampanaVacunacion "1" -- "0..*" CoberturaTerritorial
CampanaVacunacion "1" -- "0..*" RegistroVacunacion

Mascota "1" -- "0..*" RegistroVacunacion
Usuario "1" -- "0..*" RegistroVacunacion

@enduml